update the index html page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>
+        <h1>Maalathi...</h1>
+        <h2>I am mental maalathi...</h2>
+    </div>
 </body>
 </html>
